--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
       href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <!-- Define your gradient here - use online tools to find a gradient matching your branding-->
     <style>
       .gradient {
@@ -999,53 +1006,22 @@
           </div>
           <div class="flex-1">
             <p class="uppercase text-gray-500 md:mb-6">Links</p>
-            <ul class="list-reset mb-6">
+            <ul class="list-reset mb-6 flex flex-row space-x-4">
               <li class="mt-2 inline-block mr-2 md:block md:mr-0">
                 <a
-                  href="#"
+                  href="https://typebot.io/my-typebot-9hyv7lh"
                   class="no-underline hover:underline text-gray-800 hover:text-pink-500"
-                  >FAQ</a
-                >
-              </li>
-              <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                <a
-                  href="#"
-                  class="no-underline hover:underline text-gray-800 hover:text-pink-500"
-                  >Help</a
-                >
-              </li>
-              <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                <a
-                  href="#"
-                  class="no-underline hover:underline text-gray-800 hover:text-pink-500"
-                  >Support</a
+                  >Soporte</a
                 >
               </li>
             </ul>
           </div>
-          <div class="flex-1">
-            <p class="uppercase text-gray-500 md:mb-6">Legal</p>
-            <ul class="list-reset mb-6">
-              <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                <a
-                  href="#"
-                  class="no-underline hover:underline text-gray-800 hover:text-pink-500"
-                  >Terms</a
-                >
-              </li>
-              <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                <a
-                  href="#"
-                  class="no-underline hover:underline text-gray-800 hover:text-pink-500"
-                  >Privacy</a
-                >
-              </li>
-            </ul>
-          </div>
+
           <div class="flex-1">
             <p class="uppercase text-gray-500 md:mb-6">Social</p>
-            <ul class="list-reset mb-6">
+            <ul class="list-reset mb-6 flex flex-row space-x-4">
               <li class="mt-2 inline-block mr-2 md:block md:mr-0">
+                <i class="fa-brands fa-facebook text-gray-800"></i>
                 <a
                   href="#"
                   class="no-underline hover:underline text-gray-800 hover:text-pink-500"
@@ -1053,55 +1029,28 @@
                 >
               </li>
               <li class="mt-2 inline-block mr-2 md:block md:mr-0">
+                <i class="fa-brands fa-tiktok text-gray-800"></i>
                 <a
                   href="#"
                   class="no-underline hover:underline text-gray-800 hover:text-pink-500"
-                  >Linkedin</a
+                  >Tiktok</a
                 >
               </li>
               <li class="mt-2 inline-block mr-2 md:block md:mr-0">
+                <i class="fa-brands fa-instagram text-gray-800"></i>
                 <a
                   href="#"
                   class="no-underline hover:underline text-gray-800 hover:text-pink-500"
-                  >Twitter</a
-                >
-              </li>
-            </ul>
-          </div>
-          <div class="flex-1">
-            <p class="uppercase text-gray-500 md:mb-6">Company</p>
-            <ul class="list-reset mb-6">
-              <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                <a
-                  href="#"
-                  class="no-underline hover:underline text-gray-800 hover:text-pink-500"
-                  >Official Blog</a
-                >
-              </li>
-              <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                <a
-                  href="#"
-                  class="no-underline hover:underline text-gray-800 hover:text-pink-500"
-                  >About Us</a
-                >
-              </li>
-              <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                <a
-                  href="#"
-                  class="no-underline hover:underline text-gray-800 hover:text-pink-500"
-                  >Contact</a
+                  >Instagram</a
                 >
               </li>
             </ul>
           </div>
         </div>
       </div>
-      <a
-        href="https://www.freepik.com/free-photos-vectors/background"
-        class="text-gray-500"
-        >Powered By Altrooster</a
-      >
     </footer>
+    <!--Footer container-->
+
     <!-- jQuery if you need it
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   -->
